# langgraph-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: demo.py  sample_contract.txt  sample_invoice.txt  sample_report.txt
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  document_agent.py  graph.py
src/agents/nodes/: __init__.py  _llm.py  analyzer.py  classifier.py  extractor.py  human_review.py  validator.py
src/api/: models.py  routes.py
src/llm/: __init__.py  azure_provider.py  base.py  bedrock_provider.py  factory.py  openai_provider.py  vertex_provider.py
src/state/: __init__.py  persistence.py  schema.py
src/tools/: __init__.py  calculator.py  extractor.py  search.py
tests/: conftest.py  test_api.py  test_nodes.py  test_state.py  test_tools.py
