[project]
name = "langgraph-agent"
version = "0.1.0"
description = "LangGraph document processing agent"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "TC", "RUF"]
ignore = ["S101", "S104", "S608", "B008", "E731", "B905", "TC001", "TC002", "TC003", "SIM108", "RUF005", "T201", "UP038"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
